--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -39,10 +39,10 @@
         </div>
         <div id="menu" class="animate__animated animate__slideInLeft">
             <ul>
-                <li><a href="#">MECÁNICA</a></li>
+                <li><a class="sr-only" href="#mecanica">MECÁNICA</a></li>
                 <li *ngIf="!token"><a [routerLink]="['/registro']">REGISTRO</a></li>
-                <li><a href="#">PREMIOS</a></li>
-                <li><a href="#">GANADORES</a></li>
+                <li><a href="#premios">PREMIOS</a></li>
+                <li><a href="#ganadores">GANADORES</a></li>
                 <li *ngIf="!token"><a [routerLink]="['/registro']">INGRESA</a></li>
                 <li *ngIf="token"><a [routerLink]="['/micuenta']">MI CUENTA</a></li>
                 <li *ngIf="token"><a href="JavaScript:void(0)" (click)="CierraSesion()">SALIR</a></li>
