--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -317,19 +317,19 @@
                         <tbody>
                             <tr>
                                 <td>Jonathan Ramos Islas</td>
-                                <td class="text-right">1° Lugar Semanal</td>
+                                <td class="text-right">1er Lugar Semanal</td>
                             </tr>
                             <tr>
                                 <td>Laura Martinez Garcia</td>
-                                <td class="text-right">2° Lugar Semanal</td>
+                                <td class="text-right">2do Lugar Semanal</td>
                             </tr>
                             <tr>
                                 <td>Luis Eduardo Martinon López</td>
-                                <td class="text-right">3° Lugar Semanal</td>
+                                <td class="text-right">3er Lugar Semanal</td>
                             </tr>
                             <tr>
                                 <td>Ricardo Hernández Iza</td>
-                                <td class="text-right">4° Lugar Semanal</td>
+                                <td class="text-right">4to Lugar Semanal</td>
                             </tr>
                         </tbody>
                     </table>
@@ -346,19 +346,19 @@
                         <tbody>
                             <tr>
                                 <td>Jose Enrique Miramontes Medrano</td>
-                                <td class="text-right">1° Lugar Semanal</td>
+                                <td class="text-right">1er Lugar Semanal</td>
                             </tr>
                             <tr>
                                 <td>Jonathan Perez Gonzalez</td>
-                                <td class="text-right">2° Lugar Semanal</td>
+                                <td class="text-right">2do Lugar Semanal</td>
                             </tr>
                             <tr>
                                 <td>José de Jesús Gutiérrez Ramírez</td>
-                                <td class="text-right">3° Lugar Semanal</td>
+                                <td class="text-right">3er Lugar Semanal</td>
                             </tr>
                             <tr>
                                 <td>Hector Isaac Gonzalez Avila</td>
-                                <td class="text-right">4° Lugar Semanal</td>
+                                <td class="text-right">4to Lugar Semanal</td>
                             </tr>
                         </tbody>
                     </table>
